--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "slider",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://shabazshariff.github.io/personal-portfolio",
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
@@ -12,6 +13,7 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "framer-motion": "^1.10.2",
+        "gh-pages": "^3.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
@@ -19,6 +21,8 @@
         "web-vitals": "^1.0.1"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
