--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "slider",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://shabazshariff.github.io/personal-portfolio",
+    "homepage": "https://shabazshariff.com/",
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
